infrastructure/autoscaler/components/monitoring/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpa-metrics
  namespace: autoscaler-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: prometheus
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vertical-pod-autoscaler
  policyTypes:
    - Ingress
